--- a/templates/main.html
+++ b/templates/main.html
@@ -1,23 +1,59 @@
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Heatmaps</title>
+<head>
+    <title>Full Screen Leaflet Map</title>
+    <meta charset="utf-8" />
+    <link
+        rel="stylesheet"
+        href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css"
+    />
     <style>
-      /* to have the map be displayed as large as possible */
-      html, body, #map-canvas {
-        height: 100%;
-        margin: 0px;
-        padding: 0px
-      }
+        body {
+            padding: 0;
+            margin: 0;
+        }
+        html, body, #map {
+            height: 100%;
+            width: 100%;
+        }
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=visualization"></script>
-    <script>
-var map, pointarray, heatmap;
+</head>
+<body>
+    <div id="map"></div>
 
-// a shortened version of the data for Google's taxi example
-var muniData = [
-    {% for vehicle in vehicles %}
+    <script
+        src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.heat/0.2.0/leaflet-heat.js">
+    </script>
+
+    <script>
+        var map = L.map('map').setView([37.774546, -122.433523], 13);
+        mapLink =
+            '<a href="http://openstreetmap.org">OpenStreetMap</a>';
+        L.tileLayer(
+            'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: '&copy; ' + mapLink + ' Contributors',
+            maxZoom: 18,
+            }).addTo(map);
+        var heat = L.heatLayer([
+             {% for vehicle in vehicles %}
+                [{{ vehicle.lat }}, {{ vehicle.lon }}, 10]
+                    {% if not loop.last %}
+                ,
+             {% endif %}
+
+              // ...
+             {% endfor %}
+
+        ], {radius: 25}).addTo(map);
+
+    </script>
+</body>
+</html>
+<!--
+ {% for vehicle in vehicles %}
     new google.maps.LatLng({{ vehicle.lat }}, {{ vehicle.lon }})
         {% if not loop.last %}
     ,
@@ -25,39 +61,4 @@ var muniData = [
 
   // ...
     {% endfor %}
-];
-
-
-function initialize() {
-  // the map's options
-  var mapOptions = {
-    zoom: 13,
-    center: new google.maps.LatLng(37.774546, -122.433523),
-  };
-
-  // the map and where to place it
-  map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
-
-  var pointArray = new google.maps.MVCArray(muniData);
-
-  // what data for the heatmap and how to display it
-  heatmap = new google.maps.visualization.HeatmapLayer({
-    data: pointArray,
-    radius: 20
-  });
-
-  // placing the heatmap on the map
-  heatmap.setMap(map);
-}
-
-// as soon as the document is ready the map is initialized
-google.maps.event.addDomListener(window, 'load', initialize);
-
-    </script>
-  </head>
-
-  <body>
-    <!-- this is where the map finally is drawn onto -->
-    <div id="map-canvas"></div>
-  </body>
-</html>
+-->
