--- a/templates/main.html
+++ b/templates/main.html
@@ -4,10 +4,9 @@
 <head>
     <title>Full Screen Leaflet Map</title>
     <meta charset="utf-8" />
-    <link
-        rel="stylesheet"
-        href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css"
-    />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"
+  integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw=="
+  crossorigin=""/>
     <style>
         body {
             padding: 0;
@@ -22,9 +21,10 @@
 <body>
     <div id="map"></div>
 
-    <script
-        src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js">
-    </script>
+
+<script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"
+  integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA=="
+  crossorigin=""></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.heat/0.2.0/leaflet-heat.js">
     </script>
 
@@ -39,7 +39,7 @@
             }).addTo(map);
         var heat = L.heatLayer([
              {% for vehicle in vehicles %}
-                [{{ vehicle.lat }}, {{ vehicle.lon }}, 10]
+                [{{ vehicle.lat }}, {{ vehicle.lon }}, 5]
                     {% if not loop.last %}
                 ,
              {% endif %}
@@ -48,6 +48,17 @@
              {% endfor %}
 
         ], {radius: 25}).addTo(map);
+
+         {% for vehicle in vehicles %}
+{#             var marker = L.marker([{{ vehicle.lat }}, {{ vehicle.lon }}]).#}
+{#             bindTooltip("{{ vehicle.route_tag }}", {"permanent": false, "direction": "top"}).#}
+{#             addTo(map);#}
+
+
+
+              // ...
+             {% endfor %}
+
 
     </script>
 </body>
